# ChangeLog for sys-boot/grub
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru> grub-1.99.ebuild:
  Discard postinst mkconfig.

  02 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru> grub-1.99.ebuild,
  +files/grub-1.99-chroot.patch:
  Add ability CHROOT_PATH for grub-mkconfig. Fix GRUB_DISTRIBUTOR.

*grub-1.99 (01 Jun 2011)

  01 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru> +grub-1.99.ebuild,
  +files/grub-1.99-genkernel.patch, +files/defaults, +files/grub.conf.gentoo,
  +metadata.xml:
  Transfer from portage for 1.99.
