@@ -1,7 +1,8 @@
 AUX defaults 1019 RMD160 ac86956eec27bfb7f02564b94b387cda3c9fb2a5 SHA1 108b4b0aa3fb2a50c9aa6d20e4fb7c239f35feb1 SHA256 70031c9dd25afb304b5206d135292af0fe33f71e82b8bc49dae9264e177b8c40
-AUX grub-1.99-chroot.patch 5489 RMD160 78e965b6c35a7cdcc0039237ce59d548d8e34e32 SHA1 5d34af1d6c316ea9fab6199b57527e1ff14fe676 SHA256 abe4cf6e82ecc0ed4b9364a7c59ea740e2ba85839d77838adb5d5839989ae86e
+AUX grub-1.99-chroot.patch 6648 RMD160 88bc5fbbfada8f0c3ead1c6bb719b60fe2d6cef2 SHA1 60e351fb82173529311af8482c5a1978063f01da SHA256 07fce962156652ae575018ff15b5197e7467348b45dd9d0dceb116bcfc3391e4
 AUX grub.conf.gentoo 627 RMD160 d90fb4373bad476f98ec9c5065d6cdfd9e3b706f SHA1 004f2fc04605ec9190de0a87e7df8bbc33daff89 SHA256 914b15af252210a32776196437cd8013e10e57d5780e66877ef3fe9a2b4b9776
 DIST grub-1.99.tar.gz 4652619 RMD160 63293381ac2ed2479ac65896d4744b866e6d216c SHA1 6d0536da38224e7caf94cf2531a5f921ac057b9b SHA256 b91f420f2c51f6155e088e34ff99bea09cc1fb89585cf7c0179644e57abd28ff
+EBUILD grub-1.99-r1.ebuild 2797 RMD160 24fecf3fe4bf0576c656d9a4deba2bce83c03c7e SHA1 40ef7b3d73b397257fd6ea128630858281c19289 SHA256 5256e478fc7a50b5df7b98900d7cc72bac82cc46681a235a44012809f7009bf8
 EBUILD grub-1.99.ebuild 2797 RMD160 24fecf3fe4bf0576c656d9a4deba2bce83c03c7e SHA1 40ef7b3d73b397257fd6ea128630858281c19289 SHA256 5256e478fc7a50b5df7b98900d7cc72bac82cc46681a235a44012809f7009bf8
-MISC ChangeLog 636 RMD160 82902789d521c0ac0cf0dfb88996ccbe213571a3 SHA1 f2218d37eca1db55965aacc8786c83bb2f215179 SHA256 92a622775ff528c6e21e72042603d5caecf78c44ed367d1349e747ee3f27ea47
+MISC ChangeLog 930 RMD160 cbd09f612fd7231335b20a5452fd6e4cb1d73065 SHA1 dab0af464585b04461d78365f1ebf9c861684512 SHA256 ba7d356ffa5047f26a6f922122ba1d0a0c75f440f048ebb84ab300f3c88c640b
 MISC metadata.xml 349 RMD160 8e5ecd3c757f94fbccafc8120f4c8a04567135b4 SHA1 3ff0251dbb2863c4fbf0913b901bc27ed73a1acd SHA256 fcb983296ee1568339772668bcf236db0a24aabba6c328343d7bdb790978cbb9
