@@ -1,5 +1,5 @@
 diff --git a/util/grub-mkconfig.in b/util/grub-mkconfig.in
-index afc66f8..f867733 100644
+index afc66f8..a88c025 100644
 --- a/util/grub-mkconfig.in
 +++ b/util/grub-mkconfig.in
 @@ -141,19 +141,19 @@ if test -e ${GRUB_PREFIX}/device.map ; then : ; else
@@ -26,6 +26,24 @@ index afc66f8..f867733 100644
  fi
  
  # XXX: should this be deprecated at some point?
+@@ -171,7 +171,7 @@ fi
+ for x in ${GRUB_TERMINAL_OUTPUT}; do
+     if [ "x${x}" = "xgfxterm" ]; then
+ 	if [ -n "$GRUB_FONT" ] ; then
+-	    if is_path_readable_by_grub ${GRUB_FONT} > /dev/null ; then
++	    if is_path_readable_by_grub ${CHROOT_PATH}${GRUB_FONT} > /dev/null ; then
+ 		GRUB_FONT_PATH=${GRUB_FONT}
+ 	    else
+ 		echo "No such font or not readable by grub: ${GRUB_FONT}" >&2
+@@ -181,7 +181,7 @@ for x in ${GRUB_TERMINAL_OUTPUT}; do
+ 	    for dir in ${pkgdatadir} ${GRUB_PREFIX} /usr/share/grub ; do
+ 		for basename in unicode unifont ascii; do
+ 		    path="${dir}/${basename}.pf2"
+-		    if is_path_readable_by_grub ${path} > /dev/null ; then
++		    if is_path_readable_by_grub ${CHROOT_PATH}${path} > /dev/null ; then
+ 			GRUB_FONT_PATH=${path}
+ 		    else
+ 			continue
 diff --git a/util/grub.d/00_header.in b/util/grub.d/00_header.in
 index 9da1511..37af755 100644
 --- a/util/grub.d/00_header.in
@@ -78,7 +96,7 @@ index 9da1511..37af755 100644
  insmod $reader
  background_image -m stretch `make_system_path_relative_to_its_root "$GRUB_BACKGROUND"`
 diff --git a/util/grub.d/10_linux.in b/util/grub.d/10_linux.in
-index 1d1eb40..d204051 100644
+index 1d1eb40..c8608a7 100644
 --- a/util/grub.d/10_linux.in
 +++ b/util/grub.d/10_linux.in
 @@ -31,7 +31,7 @@ CLASS="--class gnu-linux --class gnu --class os"
@@ -113,7 +131,15 @@ index 1d1eb40..d204051 100644
  	     done` ;;
  esac
  
-@@ -160,7 +166,8 @@ while [ "x$list" != "x" ] ; do
+@@ -150,6 +156,7 @@ while [ "x$list" != "x" ] ; do
+   basename=`basename $linux`
+   dirname=`dirname $linux`
+   rel_dirname=`make_system_path_relative_to_its_root $dirname`
++  rel_dirname=${rel_dirname#/workspace}
+   version=`echo $basename | sed -e "s,^[^0-9]*-,,g"`
+   alt_version=`echo $version | sed -e "s,\.old$,,g"`
+   linux_root_device_thisversion="${LINUX_ROOT_DEVICE}"
+@@ -160,7 +167,8 @@ while [ "x$list" != "x" ] ; do
  	   "initrd.img-${alt_version}" "initrd-${alt_version}.img" \
  	   "initrd-${alt_version}" "initramfs-${alt_version}.img" \
  	   "initramfs-genkernel-${version}" \
