@@ -2,6 +2,16 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*grub-1.99-r1 (06 Jun 2011)
+
+  06 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +grub-1.99-r1.ebuild, files/grub-1.99-chroot.patch:
+  Update for fix scratch install.
+
+  06 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  files/grub-1.99-chroot.patch:
+  Add scratch support.
+
   02 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru> grub-1.99.ebuild:
   Discard postinst mkconfig.
 
